; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-poll-oob.c_got_eagain.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-poll-oob.c_got_eagain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8
@EAGAIN = common dso_local global i64 0, align 8
@EINPROGRESS = common dso_local global i64 0, align 8
@EWOULDBLOCK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @got_eagain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @got_eagain() #0 {
  %1 = load i64, i64* @errno, align 8
  %2 = load i64, i64* @EAGAIN, align 8
  %3 = icmp eq i64 %1, %2
  br i1 %3, label %8, label %4

4:                                                ; preds = %0
  %5 = load i64, i64* @errno, align 8
  %6 = load i64, i64* @EINPROGRESS, align 8
  %7 = icmp eq i64 %5, %6
  br label %8

8:                                                ; preds = %4, %0
  %9 = phi i1 [ true, %0 ], [ %7, %4 ]
  %10 = zext i1 %9 to i32
  ret i32 %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
